--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="dist/pivot/pivot.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="dist/jquery/jquery.min.js"></script>
+    <script src="dist/jquey-ui/jquery-ui.min.js"></script>
+    <script src="dist/pivot/pivot.js"></script>
     <title>ENAGEO mission sismiques</title>
   </head>
   <body>
