--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <script src="dist/jquery/jquery.min.js"></script>
     <script src="dist/jquey-ui/jquery-ui.min.js"></script>
     <script src="dist/pivot/pivot.js"></script>
+    <script src="dist/pivot/pivot.fr.min.js"></script>
     <title>ENAGEO mission sismiques</title>
   </head>
   <body>
