--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    
+    <script src="thirdparty/turf/turf.js"></script>
+    <link rel="stylesheet" href="thirdparty/pivot/pivot.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
@@ -16,5 +19,12 @@ rel="stylesheet"
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script src="thirdparty/jquery/jquery.min.js"></script>
+    <script src="thirdparty/jquey-ui/jquery-ui.min.js"></script>
+   
+    <script src="thirdparty/pivot/pivot.js"></script>
+    <script src="thirdparty/pivot/pivot.fr.min.js"></script>
   </body>
 </html>
+
+
