--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="thirdparty/pivot/pivot.css">
-    <script src="thirdparty/jquery/jquery.min.js"></script>
-    <script src="thirdparty/jquey-ui/jquery-ui.min.js"></script>
-<script src="thirdparty/pivot/pivot.js" ></script>
+    <link rel="stylesheet" href="./thirdparty/pivot/pivot.css">
+
+    <script src="./thirdparty/jquery/jquery.min.js"></script>
+    <script src="./thirdparty/jquey-ui/jquery-ui.min.js"></script>
+<script src="./thirdparty/pivot/pivot.js" ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title>ENAGEO mission sismiques</title>
