--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="./thirdparty/pivot/pivot.css">
-
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.min.css">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.min.js"></script>
     <script src="./thirdparty/jquery/jquery.min.js"></script>
     <script src="./thirdparty/jquey-ui/jquery-ui.min.js"></script>
 <script src="./thirdparty/pivot/pivot.js" ></script>
+<script src="./thirdparty/pivot/c3_renderers.min.js" ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <title>ENAGEO mission sismiques</title>
